# Embedded

./: .gitignore  README.md
3_SEVEN_SEG_DISP/: 3_seven_seg_disp.pdsprj  3_seven_seg_disp.pdsprj.DESKTOP-UTM8JSK.kolke.workspace  3_seven_seg_disp.pdsprj.ELSA.kolke.workspace
3_SEVEN_SEG_DISP/Project Backups/: 3_seven_seg_disp [20240818, 12-34-49].pdsprj  3_seven_seg_disp [20240818, 12-53-13].pdsprj  3_seven_seg_disp [Autosaved].pdsprj
Boilerplate/src/: main.c
C_Code/: C_Code.sln  C_Code.vcxproj  C_Code.vcxproj.filters  ClassCode.c
Conditionals/simulide/: Conditionals.sim1
Conditionals/src/: main.c
Digital Safe/: New Project.pdsprj  New Project.pdsprj.ELSA.kolke.workspace
Digital Safe/DigitalSafe/: DigitalSafe.atsln  DigitalSafe.componentinfo.xml  DigitalSafe.cproj  keypad.c  keypad.h  lcd.c  lcd.h  main.c
HelloWorld/: New Project.pdsprj  New Project.pdsprj.DESKTOP-UTM8JSK.kolke.workspace
Interrupts/: CMakeLists.txt
Interrupts/simulide/: Interrupts.sim1
Interrupts/src/: main.c
Not A Safe - Safe/: Another Fucking Safe.pdsprj  Another Fucking Safe.pdsprj.ELSA.kolke.workspace
SOS-MSG/: SOS msg circuit.pdsprj  SOS msg circuit.pdsprj.DESKTOP-UTM8JSK.kolke.workspace  SOS msg circuit.pdsprj.ELSA.kolke.workspace
SevenSeg/: run_app.sh
blinker/: Blinker.pdsprj  Blinker.pdsprj.ELSA.kolke.workspace
buttonCont/: ButtonContt.pdsprj  ButtonContt.pdsprj.DESKTOP-UTM8JSK.kolke.workspace  ButtonContt.pdsprj.ELSA.kolke.workspace
test/: CMakeLists.txt  blink.c
test/.cache/clangd/index/: blink.c.21FA553F380F1D3A.idx  blink.c.98BC48E414F1EC1A.idx
(+72 files in other folders)
